# django-ssh-deployer

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
django_deployer/management/commands/: deploy.py
django_publisher/management/commands/: publish.py
django_ssh_deployer/management/commands/: deploy.py
