[project]
name = "django-ssh-deployer"
authors = [{name = "Tim Allen", email = "flipper@peregrinesalon.com"},]
description = "Deploys Django websites via management commands over SSH via Paramiko."
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.6"
keywords = ["standard and poors"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "Django",
    "paramiko",
]

[project.urls]
"Homepage" = "https://github.com/FlipperPA/django-ssh-deployer"
"Repository" = "https://github.com/FlipperPA/django-ssh-deployer"
"Documentation" = "https://github.com/FlipperPA/django-ssh-deployer"

[build-system]
requires = ["setuptools>=67", "setuptools_scm>=7", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-select = ["I"]

[tool.ruff.format]
preview = true

[tool.setuptools_scm]
write_to = "config/_version.py"
